# bigquery-mcp-server

./: .env.example  Dockerfile  README.md  compose.yml  main.py  pyproject.toml
servers/: settings.py
servers/clients/: bigquery.py
servers/schemas/: bigquery.py
servers/tools/: bigquery.py  health.py
